fixed spacing issue on image-text-callout

--- a/assets/scss/modules/image-text-callout.scss
+++ b/assets/scss/modules/image-text-callout.scss
@@ -46,12 +46,12 @@
     }
 
     h2 {
-        padding-top: 50px;
+        padding-top: 70px;
     }
 
     p {
         margin-bottom: 28px;
-        margin-top: 50px;
+        margin-top: 5px;
         text-align: center;
     }
 
